--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libssl-dev libpcre3-dev wget unzip libopencore-amrwb0 libopencore-amrnb0 libass4 libgsm1 libmp3lame0 libopenjpeg2 libschroedinger-1.0-0 libspeex1 libtheora0  libva1  libvpx1 libxvidcore4 libnuma1
-    - wget http://installrepo.origin.kaltura.org/releases/kaltura-ffmpeg_amd64.deb
-    - wget http://installrepo.origin.kaltura.org/repo/apt/debian/pool/main/x/x264/libx264-148_0.148-1_amd64.deb
-    - wget http://installrepo.origin.kaltura.org/repo/apt/debian/pool/main/x/x265/libx265-87_2.0-4_amd64.deb
-    - wget http://installrepo.kaltura.org/releases/kaltura-ffmpeg-deb-deps/libvdpau1_0.4.1-3ubuntu1.2_amd64.deb
-    - wget http://installrepo.kaltura.org/releases/kaltura-ffmpeg-deb-deps/libfdk-aac0_0.1.3-1_amd64.deb
+    - wget http://installrepo.origin.borhan.org/releases/borhan-ffmpeg_amd64.deb
+    - wget http://installrepo.origin.borhan.org/repo/apt/debian/pool/main/x/x264/libx264-148_0.148-1_amd64.deb
+    - wget http://installrepo.origin.borhan.org/repo/apt/debian/pool/main/x/x265/libx265-87_2.0-4_amd64.deb
+    - wget http://installrepo.borhan.org/releases/borhan-ffmpeg-deb-deps/libvdpau1_0.4.1-3ubuntu1.2_amd64.deb
+    - wget http://installrepo.borhan.org/releases/borhan-ffmpeg-deb-deps/libfdk-aac0_0.1.3-1_amd64.deb
     - sudo dpkg -i libfdk-aac0_0.1.3-1_amd64.deb
     - sudo dpkg -i libx264-148_0.148-1_amd64.deb
     - sudo dpkg -i libx265-87_2.0-4_amd64.deb 
     - sudo dpkg -i libvdpau1_0.4.1-3ubuntu1.2_amd64.deb
-    - sudo dpkg -i kaltura-ffmpeg_amd64.deb
+    - sudo dpkg -i borhan-ffmpeg_amd64.deb
 language: c
 compiler:
     - clang
@@ -22,7 +22,7 @@ script: bash ./travis_build.sh $NGX_VOD_MODULE
 notifications:
   email:
     recipients:
-      - eran.kornblau@kaltura.com
-      - jess.portnoy@kaltura.com
+      - eran.kornblau@borhan.com
+      - jess.portnoy@borhan.com
     on_success: change
     on_failure: always
